Added a timer component and removed other-home component as it was just a placeholder until I got the timer component in.

--- a/app/js/nav-bar/nav-bar.component.html
+++ b/app/js/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <div>
 	<a ui-sref='home' href>Home</a>
 	&nbsp;|&nbsp;
-	<a ui-sref='other' href>Other</a>
+	<a ui-sref='timers' href>Timers</a>
 </div>
