--- a/app/js/app-viewer.component.html
+++ b/app/js/app-viewer.component.html
@@ -19,7 +19,7 @@
 			<ui-view></ui-view>
 
 			<!--<home></home>	PLACEHOLDER-->
-			<!--<other-home></other-home>-->
+			<!--<timers></timers>-->
 		</div>
 	</div>
 	<div class="row">
